# Misc

./: README
cfgs/: bashrc  fbpanel  inputrc  mrxvtrc  tkdiffrc  vimrc
cfgs/openbox/: README  autostart.sh  rc.xml
gfx/: README  mconsole8x16.bdf  ranjit.xcf  test.html
patches/: README  nvidia_96xx_legacy_kernel-3.19.8.patch  xmbdfed-4.7-linux.patch
rcfiles/: Xdefaults  bashrc  curlrc  fbpanel  fonts.conf  gitconfig  gitignore  hgrc  mrxvtrc  octaverc  solarized_dircolors  tkdiffrc  tmux.conf  vimrc  xinitrc
rcfiles/openbox/: autostart.sh  menu.xml  rc.xml
templates/: Makefile_C  Makefile_Java  bash_script  build.xml
templates/Project/: CMakeLists.txt  INSTALL  LICENSE  Makefile  README  config.mk  depend.mk
templates/Project/cmake/: BuildType.cmake  LangType.cmake
templates/Project/driver/: CMakeLists.txt  main.c
templates/Project/greeter/: CMakeLists.txt  greeter.c  greeter.h
